iptv-ca/deployment/k8s/iptv-fr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iptv-fr
  labels:
    app: iptv-fr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iptv-fr
  template:
    metadata:
      name: iptv-fr
      labels:
        app: iptv-fr
    spec:
      containers:
        - name: iptv-fr
          image: iptv-fr:1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          readinessProbe:
            httpGet:
              port: 80
              path: /
            initialDelaySeconds: 5
            periodSeconds: 5
      restartPolicy: Always
